# EmbarcaTech_ComunicacaoMQTT

./: CMakeLists.txt  ComunicacaoMQTT.c  README.md  lwipopts.h
lib/: buzzer.c  buzzer.h  factory.c  factory.h  matrix.c  mqtt_client.c  mqtt_client.h  ssd1306.c  ssd1306.h  temperature.c  temperature.h  web_server.c  web_server.h
